# project-automata

./: .gitignore  README.md
automaton/: CMakeLists.txt  DeterminateFiniteAutomaton.cpp  DeterminateFiniteAutomaton.h  DeterminateFiniteAutomatonChar.cpp  DeterminateFiniteAutomatonChar.h  DeterminateFiniteAutomatonInt.cpp  DeterminateFiniteAutomatonInt.h  State.cpp  State.h  main.cpp
automaton/app/: DeterministicFiniteAutomaton.h  FiniteAutomaton.h  NondeterministicFiniteAutomaton.h
automaton/automaton-lib/: State.cpp  State.h
automaton/base/: DeterminateFiniteAutomaton-State-Functions.cpp  DeterminateFiniteAutomaton-Utilities.cpp  DeterminateFiniteAutomaton.cpp  DeterminateFiniteAutomaton.h  DeterminateFiniteAutomaton1.cpp  DeterminateFiniteAutomaton1.h  DeterminateFiniteAutomatonChar.cpp  DeterminateFiniteAutomatonChar.h  DeterminateFiniteAutomatonInt.cpp  DeterminateFiniteAutomatonInt.h  DeterministicFiniteAutomaton.h  FiniteAutomaton.h
automaton/exception-handling/: AutomatonException.cpp  AutomatonException.h  AutomatonStateException.cpp  AutomatonStateException.h
automaton/exceptions/: AutomatonAlphabetException.cpp  AutomatonAlphabetException.h  AutomatonException.cpp  AutomatonException.h  AutomatonStateException.cpp  AutomatonStateException.h  AutomatonTransitionTableException.cpp  AutomatonTransitionTableException.h
