cmake_minimum_required(VERSION 3.16)
project(automaton)

set(CMAKE_CXX_STANDARD 17)

add_executable(automaton main.cpp base/DeterminateFiniteAutomaton.cpp base/DeterminateFiniteAutomaton.h base/DeterminateFiniteAutomatonInt.cpp base/DeterminateFiniteAutomatonInt.h base/DeterminateFiniteAutomatonChar.cpp base/DeterminateFiniteAutomatonChar.h automaton-lib/State.cpp automaton-lib/State.h exceptions/AutomatonException.cpp exceptions/AutomatonException.h exceptions/AutomatonStateException.cpp exceptions/AutomatonStateException.h base/DeterminateFiniteAutomaton-Utilities.cpp exceptions/AutomatonAlphabetException.cpp exceptions/AutomatonAlphabetException.h exceptions/AutomatonTransitionTableException.cpp exceptions/AutomatonTransitionTableException.h)